# HTTPServer

./: CMakeLists.txt  README.md
src/: HTTPRequest.cpp  HTTPRequest.h  HTTPResponse.cpp  HTTPResponse.h  client.cpp  main.cpp  messages.txt
